<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_programming</name>
  <version>0.1.0</version>
  <description>Unified ROS 2 package for TurtleBot3: voice control, LiDAR safety filter, gesture teleop, TTS service, and motion arbiter.</description>
  <maintainer email="team@example.com">Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_programming_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
